# zygisk-imgui-modmenu

./: LICENSE  README.md  build.gradle  module.gradle
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  game.h  hack.cpp  hack.h  log.h  main.cpp  utils.cpp  utils.h
module/src/main/cpp/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
